--- a/css/index.css
+++ b/css/index.css
@@ -54,6 +54,10 @@ h2 {
     color: white;
     height: 40px;
 }
+.btn1:hover{
+    background-color: white;
+    color: black;
+}
 .main2 {
     display: flex;
     flex-wrap: wrap;
